# ccla-soroban

./: .gitignore  BUILD_STATUS.md  Cargo.toml  EXECUTIVE_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  tasks.md
.github/workflows/: test.yml
contracts/: Cargo.toml
contracts/src/: access_control.rs  aggregation.rs  executor.rs  fees.rs  flash_loans.rs  lib.rs  oracle.rs  pool_registry.rs  quotes.rs  routing.rs  storage.rs  types.rs
contracts/tests/: integration_tests.rs  property_tests.rs  unit_tests.rs
deploy/: deploy.sh
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  README.md
frontend/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/pools/: page.tsx
frontend/app/swap/: page.tsx
frontend/components/: Navigation.tsx  SwapForm.tsx  TokenSelector.tsx  WalletConnect.tsx  WalletProvider.tsx
frontend/hooks/: useQuotes.ts  useSwap.ts  useWallet.ts
frontend/lib/: contract-client.ts  utils.ts
