[package]
name = "ccla-soroban"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "=21.0.0", features = ["contract"] }
soroban-sdk-macros = "=21.0.0"

[dev-dependencies]
soroban-sdk = { version = "=21.0.0", features = ["testutils"] }
proptest = "1.4"

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "property_tests"
path = "tests/property_tests.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
